# web-search-mcp

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  smoke_test.py
clients/: README.md  TESTING.md  smoke_test.py
clients/claude-code/: README.md  local_test.sh
clients/cowork/: README.md  cowork-token-helper.py  install-managed-mcp.py  install-mobileconfig.py
design/: cowork-feature-mapping.md  cowork-vs-bedrock-realusecase.md  empirical-cowork-vs-mcp-test.md  prd.md  research-comparison.md  web-search-gateway-simpletest.md
infra/web-search-gateway/: LOCAL_TEST.md  README.md  TESTING.md  cognito.yaml  deploy.sh  local_test.sh  setup_gateway.py  teardown.sh
server/: README.md  cleanup_gateway.py  cognito.yaml  deploy.sh  teardown.sh
server/lambda/web_search/: handler.py
